--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "great-bay-basic",
+  "name": "bamazon",
   "version": "1.0.0",
-  "description": "activity for demonstrating inquirer with mysql",
-  "main": "greatBayBasic.js",
+  "description": "SQl app ",
+  "main": "customer.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "inquirer": "^6.2.2",
     "mysql": "^2.16.0"
